[gd_scene load_steps=6 format=3 uid="uid://dxhtgo0v1uuem"]

[ext_resource type="Script" path="res://tower.gd" id="1_vempa"]
[ext_resource type="Material" uid="uid://dkdg26qhx57ck" path="res://Assets/orangealbedo.tres" id="2_umj2e"]
[ext_resource type="Material" uid="uid://dx34njc2r1ncl" path="res://Assets/bluealbedo.tres" id="3_d5y3q"]

[sub_resource type="SphereMesh" id="SphereMesh_diuxt"]

[sub_resource type="PrismMesh" id="PrismMesh_0oe5t"]
size = Vector3(0.4, 0.4, 0.06)

[node name="Tower1" type="Node3D"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
script = ExtResource("1_vempa")

[node name="ShowSpinner" type="Timer" parent="."]
one_shot = true

[node name="HideSpinner" type="Timer" parent="."]
one_shot = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 3.5039, 0.519114, 0)
mesh = SubResource("SphereMesh_diuxt")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 3.5039, 1.59094, 0)
mesh = SubResource("SphereMesh_diuxt")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 3.5039, 1.054, 0)
mesh = SubResource("SphereMesh_diuxt")

[node name="SpinnerCW" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.50766, 1.03072, 0)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="SpinnerCW"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.28795, 0, 0.579)
mesh = SubResource("PrismMesh_0oe5t")
surface_material_override/0 = ExtResource("2_umj2e")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="SpinnerCW"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.20206, 0, 0.579)
mesh = SubResource("PrismMesh_0oe5t")
surface_material_override/0 = ExtResource("2_umj2e")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="SpinnerCW"]
transform = Transform3D(4.37114e-08, 1, -8.74228e-08, 1, -4.37114e-08, 0, -3.82137e-15, -8.74228e-08, -1, -0.28795, 0, -0.578571)
mesh = SubResource("PrismMesh_0oe5t")
surface_material_override/0 = ExtResource("2_umj2e")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="SpinnerCW"]
transform = Transform3D(4.37114e-08, 1, -8.74228e-08, 1, -4.37114e-08, 0, -3.82137e-15, -8.74228e-08, -1, 0.20206, 0, -0.578571)
mesh = SubResource("PrismMesh_0oe5t")
surface_material_override/0 = ExtResource("2_umj2e")

[node name="SpinnerCCW" type="Node3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 3.50766, 1.03072, 0)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="SpinnerCCW"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.289988, 0.00292826, 0.580584)
mesh = SubResource("PrismMesh_0oe5t")
surface_material_override/0 = ExtResource("3_d5y3q")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="SpinnerCCW"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.200022, 0.00292814, 0.580584)
mesh = SubResource("PrismMesh_0oe5t")
surface_material_override/0 = ExtResource("3_d5y3q")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="SpinnerCCW"]
transform = Transform3D(4.37114e-08, 1, -8.74228e-08, 1, -4.37114e-08, -8.47033e-22, -3.82137e-15, -8.74228e-08, -1, -0.289988, 0.00292826, -0.576987)
mesh = SubResource("PrismMesh_0oe5t")
surface_material_override/0 = ExtResource("3_d5y3q")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="SpinnerCCW"]
transform = Transform3D(4.37114e-08, 1, -8.74228e-08, 1, -4.37114e-08, -8.47033e-22, -3.82137e-15, -8.74228e-08, -1, 0.200022, 0.00292814, -0.576987)
mesh = SubResource("PrismMesh_0oe5t")
surface_material_override/0 = ExtResource("3_d5y3q")

[connection signal="timeout" from="ShowSpinner" to="." method="_on_show_spinner_timeout"]
[connection signal="timeout" from="HideSpinner" to="." method="_on_hide_spinner_timeout"]
